# agapornis-agent-rust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/scripts/: create-release-manifest.cjs
.github/workflows/: release.yml
deploy/: agapornis-agent.service
docs/: ARCHITECTURE.md
proto/: server.proto
src/: lib.rs  main.rs
src/core/: config.rs  paths.rs  process.rs
src/grpc/services/: authorization.rs  backup.rs  console.rs  file.rs  mod.rs  responses.rs  self_test.rs  server.rs  transfer.rs
src/grpc/services/console/: decoder.rs  history.rs  lifecycle.rs  mod.rs  reader.rs  tests.rs
src/runtime/: node.rs  supervisor.rs  update.rs
src/runtime/docker/: configuration.rs  console.rs  database.rs  inspection.rs  lifecycle.rs  mod.rs  provisioning.rs  tests.rs
src/runtime/docker/configuration/: line.rs  structured.rs  tests.rs  xml.rs
src/runtime/docker/inspection/: disk.rs
src/runtime/docker/lifecycle/: recreation.rs
src/runtime/docker/provisioning/: container.rs  installer.rs  ports.rs
src/runtime/node/: crowdsec.rs  linux.rs  linux_packages.rs
src/security/: certificate.rs  protection.rs
src/storage/: files.rs
src/storage/backup/: archive.rs  crypto.rs  manager.rs  mod.rs  s3.rs  self_test.rs  tests.rs
src/storage/files/: modpack.rs
