[package]
name = "agapornis-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Agapornis node agent implemented in Rust"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-stream = "0.3"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
libc = "0.2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.13", features = ["tls-ring"] }
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
x509-parser = { version = "0.17", features = ["verify"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }


[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
