[package]
name = "agapornis-agent"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Agapornis node agent implemented in Rust"

[dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.103"
async-stream = "0.3.6"

aws-config = "1.8.18"
aws-credential-types = "1.2.14"
aws-sdk-s3 = "1.137.0"

base64 = "0.22.1"
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"

futures = "0.3.32"
futures-util = "0.3.32"

hex = "0.4.3"
libc = "0.2.186"
rand = "0.10.2"

reqwest = {
    version = "0.13.4",
    default-features = false,
    features = ["json", "rustls-no-provider", "stream"]
}

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"

tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

tonic = { version = "0.14.6", features = ["tls-ring"] }
prost = "0.14.4"
tonic-prost = "0.14.6"

tracing = "0.1.44"
tracing-subscriber = {
    version = "0.3.23",
    features = ["env-filter", "fmt"]
}

uuid = { version = "1.23.4", features = ["v4"] }

x509-parser = { version = "0.18.1", features = ["verify"] }

zip = {
    version = "8.6.0",
    default-features = false,
    features = ["deflate"]
}

rustls = {
    version = "0.23.41",
    default-features = false,
    features = ["ring", "std"]
}

bollard = "0.21.0"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"